fix(waybar): custo mnix logo not centered

--- a/home-manager/dotfiles/waybar/style.css
+++ b/home-manager/dotfiles/waybar/style.css
@@ -23,7 +23,7 @@
 /* Custom Nix */
 #custom-nix {
   padding-left: 10px;
-  padding-right: 6px;
+  padding-right: 6.5px;
   background-color: @black;
   color: #7ebae4;
   font-size: 20px; 
